--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.github.g3force</groupId>
 			<artifactId>String2ValueConverter</artifactId>
-			<version>v1.2</version>
+			<version>v1.3</version>
 		</dependency>
 
 	</dependencies>
@@ -38,6 +38,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
