--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,15 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.12.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.g3force</groupId>
 			<artifactId>String2ValueConverter</artifactId>
-			<version>v1.6</version>
+			<version>2.1</version>
 		</dependency>
 
 	</dependencies>
